{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 67,
  "lineage": "23d1729f-1a87-426a-f063-40018f3f6000",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643969185390:security-group/sg-0a3a297901405919b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3a297901405919b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20240806183934854600000006",
            "name_prefix": "node_group_one",
            "owner_id": "643969185390",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02392b4ed66dad972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_cloudquicklabs_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643969185390:route-table/rtb-0d7184a272c3efe14",
            "default_route_table_id": "rtb-0d7184a272c3efe14",
            "id": "rtb-0d7184a272c3efe14",
            "owner_id": "643969185390",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f6a5840c0f60f1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "timeouts": null,
            "vpc_id": "vpc-02392b4ed66dad972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.cloudquicklabs_gw",
            "module.vpc.aws_vpc.cloudquicklabs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudquicklabs_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643969185390:internet-gateway/igw-02f6a5840c0f60f1b",
            "id": "igw-02f6a5840c0f60f1b",
            "owner_id": "643969185390",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "vpc_id": "vpc-02392b4ed66dad972"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e23c7e2279ecdbf9",
            "route_table_id": "rtb-0d7184a272c3efe14",
            "subnet_id": "subnet-01e74304ea81a36f1"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_cloudquicklabs_default",
            "module.vpc.aws_internet_gateway.cloudquicklabs_gw",
            "module.vpc.aws_subnet.public_cloudquicklabs_subnet",
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fa75c75c84d7e21",
            "route_table_id": "rtb-0d7184a272c3efe14",
            "subnet_id": "subnet-04539a1c1709438d9"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_cloudquicklabs_default",
            "module.vpc.aws_internet_gateway.cloudquicklabs_gw",
            "module.vpc.aws_subnet.public_cloudquicklabs_subnet",
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_cloudquicklabs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643969185390:subnet/subnet-01e74304ea81a36f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e74304ea81a36f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "643969185390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "vpc_id": "vpc-02392b4ed66dad972"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643969185390:subnet/subnet-04539a1c1709438d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04539a1c1709438d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "643969185390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "vpc_id": "vpc-02392b4ed66dad972"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudquicklabs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643969185390:vpc/vpc-02392b4ed66dad972",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a9e7a74532da83b",
            "default_route_table_id": "rtb-0d7184a272c3efe14",
            "default_security_group_id": "sg-00676c3c2413709d9",
            "dhcp_options_id": "dopt-732d9a09",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02392b4ed66dad972",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7184a272c3efe14",
            "owner_id": "643969185390",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            }
          }
        }
      ]
    }
  ]
}